2006-06-25  Enrico Troeger  <enrico.troeger@uvena.de>

 * README, doc/geany.docbook: Added license notice Scintilla.


2006-06-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/notebook.c, src/notebook.h, src/document.c, src/callbacks.c,
   src/callbacks.h:
   Enable drag reordering of tabs for GTK+2.8, and a temporary
   workaround for GTK+2.6.
   Add notebook_new_tab and update document_create_new_sci to use it;
   also remove on_tab_close_clicked.
 * src/notebook.c: Fix close tab button bug introduced in last commit.


2006-06-24  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/utils.c: Replaced 'blank' by 'include "..."'. Fixed a bug in
                utils_brace_match() which prevents correctly matching.
 * src/document.c, src/sci_cb.c, src/filetypes.c:
   Made auto completion work only for the current filetype
   (i.e. it hides symbols from other filetypes).
 * tagmanager/options.c, tagmanager/parse.c: Removed unneeded code.
 * tagmanager/tm_workspace.c, tagmanager/tm_source_file
   tagmanager/tm_tag.c, tagmanager/tm_project, tagmanager/parsers.h,
   tagmanager/tm_file_entry.c, tagmanager/entry.c, src/highlighting.c,
   data/latex.tags, data/php.tags, Makefile.am:
   Added global auto completion tags for PHP and LaTeX.
 * src/keybindings.c, src/callbacks.c, src/sci_cb.c, src/main.c,
   src/geany.h, src/dialogs.c:
   Added some sanity checks to prevent crashes.
 * src/sci_cb.c, src/highlighting.c:
   Removed URL highlighting code(useless feature, never was enabled).
 * src/treeviews.c: Set policy settings for the scolledwindow.
 * scintilla/License.txt, scintilla/Makefile.am, doc/Makefile.am:
   Added Scintilla license file.


2006-06-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/msgwindow.c: Add a timestamp to messages in the Status window
                    (closes request #1509908).


2006-06-22  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/utils.c: Reorganised C include file items, added C++ headers.